@@ -82,6 +82,10 @@ public class AlunoService {
         return alunoMapper.consolidarPorAluno(dadosBrutos);
     }
 
+    public Boolean validarContratacaoPlanoAluno(Integer idAluno) {
+        return alunoRepository.validarContratacaoPlanoAluno(idAluno);
+    }
+
     public Page<AlunoDetalhadoComTreinosDTO> buscarAlunosDetalhadosPaginado(Integer idPersonal, Pageable pageable) {
         // buscar tudo, sem paginação para pegar todos os registros (ou um número grande)
 
@@ -306,7 +310,7 @@ public class AlunoService {
             return null;
         }
 
-        Object[] result = results.get(0);
+        Object[] result = results.getFirst();
 
         return new EvolucaoExercicioDTO(
                 result[0] != null ? ((Number) result[0]).longValue() : null,
